Re-enable Java 17 features (#2333)